# rookpp

./: .getdeps.sh  .gitignore  Autofile  CMakeLists.txt  Makefile  _master._.sh  _master._auto.sh  _master._make.sh  auto.sh  build.sh  copylib.sh  getlib.sh  libs  readme.md  workspace.code-workspace
rookxx/: CMakeLists.txt  build.sh
rookxx.ioutil/: CMakeLists.copy.sh  CMakeLists.txt
rookxx.ioutil/hdr/: IO.h
rookxx.ioutil/src/: IO.cpp
rookxx/hdr/: Items.h
rookxx/hdr/bitman/: BPtr.h  BitPnt.h  BitPtr.h  ConstBitPnt.h  ConstBitPtr.h
rookxx/hdr/collection/: AttachableList.h  AttachableListConstIterator.h  AttachableListIterator.h
rookxx/hdr/collection/voidptr/: VoidPtrConstIterator.h  VoidPtrIterator.h  VoidPtrList.h  VoidPtrListConstIterator.h  VoidPtrListIterator.h  VoidPtrQueue.h  VoidPtrSegCol.h  VoidPtrSegColConstIterator.h  VoidPtrSegColIterator.h  VoidPtrSegColSegment.h  VoidPtrStack.h
rookxx/hdr/ramen/: ArrUtil.h  DataReader.h  DataWriter.h  Serializable.h  SmartReader.h  SmartSerializable.h  SmartWriter.h  String16.h  String8.h  StringTemplate.h
rookxx/hdr/ramen/datcol/: DataCollection.h  DataCollectionDirectory.h  DataCollectionFile.h  DataCollectionItem.h
rookxx/hdr/ramen/huffman/: HuffmanLeaf.h  HuffmanNode.h  HuffmanNodeType.h  HuffmanParent.h  HuffmanTree.h  HuffmanTree_SAn.h  HuffmanUtility.h
rookxx/hdr/strings/: String8.h  StringTemplate.h
rookxx/src/bitman/: BitPnt.cpp  BitPtr.cpp  ConstBitPnt.cpp  ConstBitPtr.cpp
rookxx/src/collection/voidptr/: VoidPtrConstIterator.cpp  VoidPtrIterator.cpp  VoidPtrList.cpp  VoidPtrListConstIterator.cpp  VoidPtrListIterator.cpp  VoidPtrQueue.cpp  VoidPtrSegCol.cpp  VoidPtrSegColConstIterator.cpp  VoidPtrSegColIterator.cpp  VoidPtrSegColSegment.cpp  VoidPtrStack.cpp
rookxx/src/ramen/: DataReader.cpp  DataWriter.cpp  SmartReader.cpp  SmartWriter.cpp  String16.cpp  String8.cpp
rookxx/src/ramen/datcol/: DataCollection.cpp  DataCollectionDirectory.cpp  DataCollectionFile.cpp  DataCollectionItem.cpp
rookxx/src/ramen/huffman/: HuffmanLeaf.cpp  HuffmanNode.cpp  HuffmanParent.cpp  HuffmanTree.cpp  HuffmanTree_SAn.cpp  HuffmanUtility.cpp
rookxx/src/strings/: String8.cpp
rookxx/strings/: StringTemplate.h
src/dep/: rookpp.io.BinWriter.dep
src/hdr/: rookpp.BitData.h  rookpp.BitData.h.sh  rookpp.Parsing.h  rookpp.io.BinReader.h  rookpp.io.BinWriter.h
src/rookpp/: build.sh  build.sh.auto  build.sh.make
src/rookpp.io/: .gitignore  build.sh  build.sh.auto  build.sh.make  deps  deps.txt
src/rookpp.io/source/: rookpp.io.BinReader.-methods.cpp.sh  rookpp.io.BinWriter.-methods.cpp  rookpp.io.BinWriter.-methods.cpp.sh  rookpp.io.BinWriter.cpp
src/rookpp/header/: rookpp.Parsing.h.sh
src/rookpp/source/: rookpp.Parsing.cpp  rookpp.Parsing.cpp.sh
src/src/rookpp.BitData/: rookpp.BitData.cpp  rookpp.BitData.cpp.sh
src/src/rookpp.Parsing/: rookpp.Parsing.cpp.sh
src/src/rookpp.io.BinReader/: rookpp.io.BinReader.-methods.cpp  rookpp.io.BinReader.cpp
test/: CMakeLists.txt  main.cpp  test.txt
test/hdr/: TreePrinter.h
test/src/: TreePrinter.cpp
